--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -16,6 +16,33 @@
   row-gap: 0.5rem;
 }
 
+/* Destaques */
+
+.destaques {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.destaques__barra {
+  flex-grow: 1;
+}
+
+/* Eventos */
+
+.eventos__lista {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+    row-gap: 1rem;
+    justify-content: center;
+}
+
+.eventos__item {
+    flex-grow: 1;
+    max-width: 400px;
+}
+
 @media (min-width: 720px) {
   /* Cabeçalho */
 
@@ -29,6 +56,10 @@
     flex-wrap: wrap;
     column-gap: 1.5rem;
     row-gap: 1rem;
+  }
+
+  .eventos__lista {
+    justify-content: end;
   }
 }
 
