--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -18,6 +18,11 @@
     grid-row: 1/3;
   }
 
+  .banner {
+    grid-template-columns: calc(50% - 0.75rem) auto auto;
+    column-gap: 1.5rem;
+  }
+
   .banner img:nth-child(4) {
     grid-column: 3/4;
     grid-row: 1/3;
