--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -12,6 +12,56 @@
   grid-row: 2/4;
 }
 
+.eventos__item {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto repeat(2, 1fr) auto;
+  grid-template-areas:
+    "imagem imagem"
+    "nome nome"
+    "data data"
+    "local botao";
+}
+
+.eventos__item img {
+  grid-area: imagem;
+}
+
+.eventos__item h3 {
+  grid-area: nome;
+}
+
+.eventos__item h4 {
+  grid-area: data;
+}
+
+.eventos__item h5 {
+  grid-area: local;
+}
+
+.eventos__item button {
+  grid-area: botao;
+}
+
+.agenda__item {
+  display: grid;
+}
+
+.agenda__item img {
+  grid-column: 1/ 3;
+}
+
+.agenda__item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.agenda__item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto 1fr;
+}
+
 @media (min-width: 720px) {
   .banner img:nth-child(1) {
     grid-column: 1/2;
