--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -43,6 +43,32 @@
   max-width: 400px;
 }
 
+/* Agenda ATIVIDADE PARA SABER MAIS */
+
+.agenda__lista {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+  column-gap: 1.5rem;
+  justify-content: center;
+}
+
+.agenda__item {
+  flex-grow: 1;
+}
+
+/* Rodapé */
+
+.rodape{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.rodape__logo {
+  align-self: end;
+}
+
 @media (min-width: 720px) {
   /* Cabeçalho */
 
